# tuerschloss

./: .gitignore  Cargo.toml  README.md  ansible.cfg  config_template.json  rust-toolchain.toml
.cargo/: config.toml
.github/actions/: setup.yaml
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml
deploy/: inventory.ini  site.yaml
deploy/files/: tuerschloss.service
src/: client.rs  command.rs  encrypted.rs  keyturner.rs  main.rs  pairing.rs
